added streamable route for song search
